# SimpleEngine

./: .gitignore  CMakeLists.txt  README.md  common.h  main.cpp  rasterizer.h
src/: common.h  digital_differential_analyzer.h  directional_light.h  main.cpp  mesh.h  projection.h  rasterizer.h  screen.h
