CMAKE_MINIMUM_REQUIRED(VERSION 3.20)
 
SET(PROJECT_NAME "SimpleEngine")
PROJECT( ${PROJECT_NAME} C CXX)

SET(CMAKE_DISABLE_SOURCE_CHANGES ON)
SET(CMAKE_DISABLE_IN_SOURCE_BUILD ON)

SET(CMAKE_CXX_STANDARD 17)


FILE( GLOB SRCS 
 "src/*.cpp" 
 "src/*.h" 
)

include_directories("${CMAKE_SOURCE_DIR}\\eigen")
ADD_EXECUTABLE(${PROJECT_NAME} ${SRCS} )
set_target_properties(${PROJECT_NAME} PROPERTIES LINKER_LANGUAGE CXX)
